Resolve font weight and spacing issue

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -238,6 +238,7 @@ form {
       margin-left: auto;
       margin-right: auto;
       margin-bottom: 0;
+      font-weight: 200;
       width: 800px;
     }
     &.center {
@@ -387,7 +388,7 @@ select {
 
 .select-container {
   text-align: center;
-  padding: 30px 0;
+  padding: 70px 0 50px 0;
 }
  
 .selectbox {  
